<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:ignore="UnusedAttribute"
    android:id="@+id/container"
    tools:targetApi="m">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/moviePosterInDetails"
            android:layout_width="match_parent"
            android:layout_height="475dp"
            android:background="@color/black"
            android:scaleType="centerCrop"
            tools:src="@drawable/dummyposter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="@drawable/gradient_top_bottom_bg" />

        </LinearLayout>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp">


        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="390dp"
            android:layout_marginBottom="12dp"
            android:paddingHorizontal="13dp"
            android:fontFamily="@font/jost_medium"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="Movie Title" />

<!--        <ImageView-->
<!--            android:id="@+id/moviePosterInDetails"-->
<!--            android:layout_width="126dp"-->
<!--            android:layout_height="190dp"-->
<!--            android:layout_below="@id/title_text"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:layout_margin="20dp"-->
<!--            app:srcCompat="@drawable/dummyposter" />-->

        <TextView
            android:id="@+id/videoQuality"
            style="@style/sizelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text"
            android:layout_toStartOf="@+id/year_text"
            android:background="@drawable/rounded_corner_labels"
            android:fontFamily="@font/jost_medium"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="1080p" />

        <TextView
            android:id="@+id/year_text"
            style="@style/sizelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner_labels"
            android:fontFamily="@font/jost_medium"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="2099" />

        <TextView
            android:id="@+id/size"
            style="@style/sizelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text"
            android:layout_toEndOf="@+id/year_text"
            android:background="@drawable/rounded_corner_labels"
            android:fontFamily="@font/jost_medium"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="32 GB" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/size"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/jost_regular"
            android:orientation="horizontal"
            android:padding="10dp"
            android:text="@string/play"
            app:backgroundTint="#1C1C1C"
            app:icon="@drawable/ic_baseline_play_arrow_24"
            app:iconGravity="textStart">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/download"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:backgroundTint="#1C1C1C"
            android:layout_below="@id/play"
            app:icon="@drawable/ic_baseline_save_alt_24"
            app:iconGravity="textStart"
            android:text="@string/download"
            android:fontFamily="@font/jost_regular">

        </com.google.android.material.button.MaterialButton>
        <TextView
            android:id="@+id/overviewtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_medium"
            android:layout_below="@id/download"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="18sp">

        </TextView>
        <TextView
            android:id="@+id/overviewdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/jost_regular"
            android:textSize="14sp"
            android:layout_below="@id/overviewtext"
            android:clickable="true"
            android:focusable="true"
            tools:text="Basically the whole plot of movie" />
        <TextView
            android:id="@+id/linktitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:layout_below="@+id/overviewdesc"
            android:fontFamily="@font/jost_medium"
            android:text="@string/available_files"
            android:textColor="@color/white">

        </TextView>

        <TextView
            android:id="@+id/listoffiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linktitle"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/jost_regular"
            android:textColor="@color/white" />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>